// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`schema domainRoot at child: fooChild_body 1`] = `
"\`\`\`
-
    id: foo.child
    title: foo.child
    parent: foo.root
    children: [foo.grandchild]
-
    id: foo.grandchild
    title: foo.grandchild
    parent: foo.child
    children: []

\`\`\`"
`;

exports[`schema domainRoot at root: foo_body 1`] = `
"\`\`\`
-
    id: foo.root
    title: foo.root
    parent: null
    children: [foo.child]
-
    id: foo.child
    title: foo.child
    parent: foo.root
    children: [foo.grandchild]
-
    id: foo.grandchild
    title: foo.grandchild
    parent: foo.child
    children: []

\`\`\`"
`;
